some css changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
-title: "" # the name of your site, e.g. ACME Corp.
+baseurl: "/hustlestargm"
+url: "https://karamo10.github.io"
