--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-url: 'https://karamo10.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: '/hustlestargm' # the subpath of your site, e.g. /blog
-title: 'HustleStars GM' # the name of your site, e.g. ACME Corp.
+url: 'https://karamo10.github.io' # Base hostname
+baseurl: '/hustlestargm' # Repository name (needed for GitHub Pages)
+title: 'HustleStars GM' # Site title
+
